--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.2.0",
   "main": "lib/*.*",
   "private": false,
+  "ignore": "**/*",
   "dependencies": {
     "requirejs": "~2.1.11",
     "knockout": "~3.3.0",
